fixed header banner on mobile device

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1607,6 +1607,9 @@ p.testimonials-name {
   width: 10px;
 }
 @media all and (max-width: 912px) {
+  .Banner_carouselcaption__NAlFf {
+    bottom: 5% !important;
+}
   .currentRate .easy-application {
     background-size: auto;
 }
@@ -1669,6 +1672,9 @@ p.testimonials-name {
   display: initial;
   margin-top: revert;
 }
+}
+.mobile-banner{
+  display: none;
 }
 @media all and (max-width: 768px) {
   .pagination {
@@ -1758,7 +1764,7 @@ p.testimonials-name {
     text-align: center;
   }
   .Banner_carouselcaption__NAlFf {
-    bottom: 10%;
+    // bottom: 10%;
     z-index: 999;
   }
   .works-container .works-title {
@@ -1788,20 +1794,25 @@ p.testimonials-name {
 .faq_section {
   background-size: contain;
 }
-}
-.mobile-banner{
+.desktop-banner{
   display: none;
 }
+.mobile-banner{
+  display: block;
+}
+.home-slider .carousel-indicators {
+  display: none;
+}
+.carousel-fade .carousel-item img{
+  height: 600px;
+}
+.slider-images span {
+  height: 600px !important;
+}
+}
+
 @media all and (max-width: 540px) {
-  .desktop-banner{
-    display: none;
-  }
-  .mobile-banner{
-    display: block;
-  }
-  .home-slider .carousel-indicators {
-    display: none;
-  }
+  
   .carousel-fade .carousel-item img{
     height: 450px;
   }
@@ -1812,7 +1823,7 @@ p.testimonials-name {
     padding: 30px 0;
 }
   .Banner_carouselcaption__NAlFf {
-    bottom: 10% !important;
+    bottom: 0% !important;
 }
   .meeting_section h2{
     font-size: 30px;
@@ -1963,7 +1974,7 @@ p.testimonials-name {
   .Banner_carouselcaption__NAlFf {
       bottom: 0%;
       z-index: 999;
-      top: 20px;
+      top: 20%;
   }
   .meeting_image {
       display: none;
